Add Paragraphs to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -14,6 +14,10 @@
 	<h5>Heading Five</h5>
 	<h6>Heading Six</h6>
 
+	<h1>Paragraphs</h1>
+	<p>This is a paragraph.</p>
+	<p>This is another paragraph.</p>
+
 </body>
 
 </html>
