Add Links to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -18,6 +18,9 @@
 	<p>This is a paragraph.</p>
 	<p>This is another paragraph.</p>
 
+	<h1>Links</h1>
+	<a href="https://github.com/VMPYRC/Erudite">Link to the repository</a>
+
 </body>
 
 </html>
