Add Images to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -15,11 +15,18 @@
 	<h6>Heading Six</h6>
 
 	<h1>Paragraphs</h1>
+
 	<p>This is a paragraph.</p>
 	<p>This is another paragraph.</p>
 
 	<h1>Links</h1>
+
 	<a href="https://github.com/VMPYRC/Erudite">Link to the repository</a>
+
+	<h1>Images</h1>
+
+	<img src="../Images/VMPYRC.png" alt="VMPYRC" width="160" height="90">
+	<img src="https://raw.githubusercontent.com/VMPYRC/Erudite/main/Images/VMPYRC.png" alt="VMPYRC" style="float:right;width:160px;height:90px;"">
 
 </body>
 
