Add Image Maps to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -28,6 +28,17 @@
 	<img src="../Images/VMPYRC.png" alt="VMPYRC" width="160" height="90">
 	<img src="https://raw.githubusercontent.com/VMPYRC/Erudite/main/Images/VMPYRC.png" alt="VMPYRC" style="float:right;width:160px;height:90px;"">
 
+	<h2>Image Maps</h2>
+
+	<img src=" ../Images/Symbols.png" alt="Symbols" usemap="#symbols-map">
+	<map name="symbols-map">
+		<area shape="default" alt="Entire Region" title="Entire Region" href="ADD LATER">
+		<area shape="rect" alt="Rectangle Smile" title="Rectangle Smile" href="ADD LATER" coords="593,585,778,790">
+		<area shape="circle" alt="Circle Smile" title="Circle Smile" href="ADD LATER" coords="341,384,116" >
+		<area shape="poly" alt="Star" title="Star" href="ADD LATER" coords="271,701,218,659,287,638,328,575,367,617,435,623,396,685,399,719,343,718,281,781" >
+		<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
+	</map>
+
 </body>
 
 </html>
