Add Line Breaks to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -17,7 +17,7 @@
 	<h1>Paragraphs</h1>
 
 	<p>This is a paragraph.</p>
-	<p>This is another paragraph.</p>
+	<p>This is another paragraph <br> but with a line break.</p>
 
 	<h1>Links</h1>
 
