Add Title attribute to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -18,6 +18,7 @@
 
 	<p>This is a paragraph.</p>
 	<p>This is another paragraph <br> but with a line break.</p>
+	<p title="Mission Accomplished! This is a tooltip!">Mouse over this paragraph to display the title attribute as a tooltip!</p>
 
 	<h1>Links</h1>
 
