--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -5,7 +5,7 @@
 	<title>Basics</title>
 </head>
 
-<body>
+<body style="background-color: black; color:white">
 
 	<h1>Heading One</h1>
 	<h2>Heading Two</h2>
