Add Formatting to Basics.html

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -14,15 +14,30 @@
 	<h5>Heading Five</h5>
 	<h6>Heading Six</h6>
 
-	<h1>Paragraphs</h1>
+	<h1>Formatting</h1>
 
-	<p>This is a paragraph.</p>
+	<p>This is a normal paragraph.</p>
 	<p>This is another paragraph <br> but with a line break.</p>
 	<p title="Mission Accomplished! This is a tooltip!">Mouse over this paragraph to display the title attribute as a tooltip!</p>
-
-	<h1>Links</h1>
-
-	<a href="https://github.com/VMPYRC/Erudite">Link to the repository</a>
+	<b>Bold Text</b><br>
+	<strong>Strong Text</strong><br>
+	<i>Italic Text</i><br>
+	<em>Emphasized Text</em><br>
+	<mark>Marked Text</mark><br>
+	<small>Smaller Text</small><br>
+	<sub>Subscript Text</sub><br>
+	<sup>Superscript Text</sup><br>
+	<del>Deleted Text</del><br>
+	<ins>Inserted Text</ins><br>
+	<abbr title="Abbreviation">Abbreviated Text</abbr><br>
+	<bdo dir="rtl">Right to Left Text</bdo><br>
+	<!--Commented Text-->
+	<a href="https://github.com/VMPYRC/Erudite">Linked Text</a><br>
+	<quote>Quoted Text</quote><br>
+	<cite>Cited Text</cite><br>
+	<blockquote cite="https://github.com/VMPYRC/Erudite">
+		This is a blockquote. The source is the repository.
+	</blockquote>
 
 	<h1>Images</h1>
 
@@ -39,6 +54,10 @@
 		<area shape="poly" alt="Star" title="Star" href="ADD LATER" coords="271,701,218,659,287,638,328,575,367,617,435,623,396,685,399,719,343,718,281,781" >
 		<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
 	</map>
+	
+	<address>
+		Written by <a href="https://github.com/VMPYRC">VMPYRC</a>
+	</address>
 
 </body>
 
