--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -3,9 +3,10 @@
 
 <head>
 	<title>Basics</title>
+	<link rel="stylesheet" href="CSS/styles.css"
 </head>
 
-<body style="background-color: black; color:white">
+<body>
 
 	<h1>Heading One</h1>
 	<h2>Heading Two</h2>
