--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -9,7 +9,7 @@
 <body>
 
 	<h1>Heading One</h1>
-	<h2>Heading Two</h2>
+	<h2 id="two">Heading Two</h2>
 	<h3>Heading Three</h3>
 	<h4>Heading Four</h4>
 	<h5>Heading Five</h5>
@@ -33,12 +33,18 @@
 	<abbr title="Abbreviation">Abbreviated Text</abbr><br>
 	<bdo dir="rtl">Right to Left Text</bdo><br>
 	<!--Commented Text-->
-	<a href="https://github.com/VMPYRC/Erudite">Linked Text</a><br>
 	<quote>Quoted Text</quote><br>
 	<cite>Cited Text</cite><br>
 	<blockquote cite="https://github.com/VMPYRC/Erudite">
 		This is a blockquote. The source is the repository.
 	</blockquote>
+	<button onclick="document.location='https://github.com/VMPYRC/Erudite'">Link to Erudite</button><br>
+	<a href="https://github.com/VMPYRC/Erudite">Linked Text to Erudite</a><br>
+	<a href="https://github.com/VMPYRC/Erudite" target="_self">Linked Text to Erudite in the Same Window or Tab (Default)</a><br>
+	<a href="https://github.com/VMPYRC/Erudite" target="_blank">Linked Text to Erudite in a New Tab</a><br>
+	<a href="https://github.com/VMPYRC/Erudite" target="_parent">Linked Text to Erudite in the Parent Frame</a><br>
+	<a href="https://github.com/VMPYRC/Erudite" target="_top">Linked Text to Erudite in the Full Body of the Window</a><br>
+	<a href="#two">Jump to Heading Two</a>
 
 	<h1>Images</h1>
 
