--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -3,7 +3,8 @@
 
 <head>
 	<title>Basics</title>
-	<link rel="stylesheet" href="CSS/styles.css"
+	<link rel="stylesheet" href="CSS/styles.css">
+	<link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
 </head>
 
 <body>
