--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -63,6 +63,49 @@
 		<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
 	</map>
 	
+	<h1>Tables</h1>
+
+	<table>
+		<caption>Horizontal Table</caption>
+		<!--Table Rows-->
+		<tr>
+			<!--Table Headers-->
+			<th colspan="2">One and Two</th>
+			<th>Three</th>
+		</tr>
+		<tr>
+			<!--Table Data-->
+			<td>Three</td>
+			<td colspan="2">Four and Five</td>
+		</tr>
+		<tr>
+			<td>Six</td>
+			<td>Seven</td>
+			<td>Eight</td>
+		</tr>
+	</table><br>
+	<table>
+		<caption>Vertical Table</caption>
+		<tr>
+			<th>One</th>
+			<td>Four</td>
+			<td>7</td>
+		</tr>
+		<tr>
+			<th>Two</th>
+			<td rowspan="2">5 and 6</td>
+			<td>Eight</td>
+		</tr>
+		<tr>
+			<th>Three</th>  
+			<td>9</td>
+		</tr>
+	</table>
+
+
+
+
+	<br>
 	<address>
 		Written by <a href="https://github.com/VMPYRC">VMPYRC</a>
 	</address>
