--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -63,6 +63,36 @@
 		<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
 	</map>
 	
+	<h1>Lists</h1>
+
+	<ul>
+		<li>Unordered</li>
+		<li>List</li>
+	</ul>
+
+	<ol>
+		<li>Ordered</li>
+		<li>List</li>
+	</ol>
+
+	<dl>
+		<dt>Descriptive</dt>
+		<dd>List</dd>
+		<dt>+ Plus Signs</dt>
+		<dd>- Dash / Minus Signs</dd>
+	</dl>
+
+	<ul>
+		<li>Nested</li>
+		<li>Lists
+		  <ul>
+			<li>Look</li>
+			<li>Like</li>
+		  </ul>
+		</li>
+		<li>This</li>
+	  </ul>
+
 	<h1>Tables</h1>
 
 	<table>
