HTML Formatting and Meta

--- a/HTML/Basics.html
+++ b/HTML/Basics.html
@@ -5,19 +5,20 @@
 	<title>Basics</title>
 	<link rel="stylesheet" href="CSS/styles.css">
 	<link rel="icon" type="image/x-icon" href="../Images/favicon.ico">
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
 
-	<h1>Heading One</h1>
-	<h2 id="two">Heading Two</h2>
-	<h3>Heading Three</h3>
-	<h4>Heading Four</h4>
-	<h5>Heading Five</h5>
-	<h6>Heading Six</h6>
+<h1>Heading One</h1>
+<h2 id="two">Heading Two</h2>
+<h3>Heading Three</h3>
+<h4>Heading Four</h4>
+<h5>Heading Five</h5>
+<h6>Heading Six</h6>
 
-	<h1>Formatting</h1>
-
+<h1>Formatting</h1>
 	<p>This is a normal paragraph.</p>
 	<p>This is another paragraph <br> but with a line break.</p>
 	<p title="Mission Accomplished! This is a tooltip!">Mouse over this paragraph to display the title attribute as a tooltip!</p>
@@ -47,54 +48,47 @@
 	<a href="https://github.com/VMPYRC/Erudite" target="_top">Linked Text to Erudite in the Full Body of the Window</a><br>
 	<a href="#two">Jump to Heading Two</a>
 
-	<h1>Images</h1>
-
+<h1>Images</h1>
 	<img src="../Images/VMPYRC.png" alt="VMPYRC" width="160" height="90">
 	<img src="https://raw.githubusercontent.com/VMPYRC/Erudite/main/Images/VMPYRC.png" alt="VMPYRC" style="float:right;width:160px;height:90px;"">
-
-	<h2>Image Maps</h2>
-
-	<img src=" ../Images/Symbols.png" alt="Symbols" usemap="#symbols-map">
-	<map name="symbols-map">
-		<area shape="default" alt="Entire Region" title="Entire Region" href="ADD LATER">
-		<area shape="rect" alt="Rectangle Smile" title="Rectangle Smile" href="ADD LATER" coords="593,585,778,790">
-		<area shape="circle" alt="Circle Smile" title="Circle Smile" href="ADD LATER" coords="341,384,116" >
-		<area shape="poly" alt="Star" title="Star" href="ADD LATER" coords="271,701,218,659,287,638,328,575,367,617,435,623,396,685,399,719,343,718,281,781" >
-		<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
-	</map>
 	
-	<h1>Lists</h1>
+	<h2>Image Maps</h2>
+		<img src=" ../Images/Symbols.png" alt="Symbols" usemap="#symbols-map">
+		<map name="symbols-map">
+			<area shape="default" alt="Entire Region" title="Entire Region" href="ADD LATER">
+			<area shape="rect" alt="Rectangle Smile" title="Rectangle Smile" href="ADD LATER" coords="593,585,778,790">
+			<area shape="circle" alt="Circle Smile" title="Circle Smile" href="ADD LATER" coords="341,384,116" >
+			<area shape="poly" alt="Star" title="Star" href="ADD LATER" coords="271,701,218,659,287,638,328,575,367,617,435,623,396,685,399,719,343,718,281,781" >
+			<area shape="poly" alt="Heart" title="Heart" href="ADD LATER" coords="734,279,789,283,797,343,730,454,720,509,680,522,666,493,686,454,666,415,628,360,610,314,631,279,674,273,708,310">
+		</map>
 
+<h1>Lists</h1>
 	<ul>
 		<li>Unordered</li>
 		<li>List</li>
 	</ul>
-
 	<ol>
 		<li>Ordered</li>
 		<li>List</li>
 	</ol>
-
 	<dl>
 		<dt>Descriptive</dt>
 		<dd>List</dd>
 		<dt>+ Plus Signs</dt>
 		<dd>- Dash / Minus Signs</dd>
 	</dl>
-
 	<ul>
 		<li>Nested</li>
 		<li>Lists
-		  <ul>
+			<ul>
 			<li>Look</li>
 			<li>Like</li>
-		  </ul>
+			</ul>
 		</li>
 		<li>This</li>
-	  </ul>
+	</ul>
 
-	<h1>Tables</h1>
-
+<h1>Tables</h1>
 	<table>
 		<caption>Horizontal Table</caption>
 		<!--Table Rows-->
@@ -131,14 +125,10 @@
 			<td>9</td>
 		</tr>
 	</table>
-
-
-
-
-	<br>
-	<address>
-		Written by <a href="https://github.com/VMPYRC">VMPYRC</a>
-	</address>
+<br>
+<address>
+	Written by <a href="https://github.com/VMPYRC">VMPYRC</a>
+</address>
 
 </body>
 
